syntax = "proto3";

package gophkeeper;

option go_package = "github.com/rycln/gokeep/internal/shared/proto/gen/gophkeeper";

message RegisterRequest {
  string username = 1;
  string password = 2;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message AuthResponse {
  string user_id = 1;
  string token = 2;
  int64 expires_at = 3;
  string refresh_token = 4; 
}

service GophKeeper {
  rpc Register (RegisterRequest) returns (AuthResponse) {}
  rpc Login (LoginRequest) returns (AuthResponse) {}
}